--- a/src/bio/SConscript
+++ b/src/bio/SConscript
@@ -18,15 +18,9 @@ def scons():
     denv.AppendUnique(OBJPREFIX='b_')
 
     # SPDK related libs
-    libs = ['spdk_env_dpdk', 'spdk_thread', 'spdk_bdev', 'spdk_accel']
-    libs += ['rte_mempool', 'rte_mempool_ring', 'rte_bus_pci', 'rte_power']
-    libs += ['rte_pci', 'rte_ring', 'rte_mbuf', 'rte_eal', 'rte_kvargs']
-    libs += ['spdk_bdev_aio', 'spdk_bdev_nvme', 'spdk_bdev_malloc']
-    libs += ['spdk_conf', 'spdk_blob', 'spdk_nvme', 'spdk_util']
-    libs += ['spdk_json', 'spdk_jsonrpc', 'spdk_rpc', 'spdk_trace']
-    libs += ['spdk_sock', 'spdk_log', 'spdk_notify', 'spdk_blob_bdev']
-    libs += ['spdk_vmd', 'spdk_event', 'spdk_event_bdev', 'spdk_event_accel']
-    libs += ['spdk_event_vmd']
+    libs = ['spdk_env_dpdk', 'spdk_thread', 'spdk_init', 'spdk_blob']
+    libs += ['rte_mempool_ring', 'rte_bus_pci', 'spdk_bdev_aio']
+    libs += ['spdk_bdev_nvme', 'spdk_blob_bdev', 'spdk_vmd']
 
     # Other libs
     libs += ['numa', 'dl', 'smd']
