Set same environment regardless so items are not rebuilt when different targets are specified
Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/bio/SConscript
+++ b/src/bio/SConscript
@@ -6,10 +6,11 @@ def scons():
     """Execute build"""
     Import('env', 'prereqs', 'control_tgts')
 
+    env.AppendUnique(LIBPATH=[Dir('.')])
+    env.AppendUnique(LIBPATH=[Dir('smd')])
+
     if not prereqs.server_requested():
         return
-
-    env.AppendUnique(LIBPATH=[Dir('.')])
 
     denv = env.Clone()
     denv.AppendUnique(LINKFLAGS=["-Wl,--no-as-needed"])
