--- a/src/bio/smd/SConscript
+++ b/src/bio/smd/SConscript
@@ -3,16 +3,15 @@ def scons():
     """Execute build"""
     Import('env', 'prereqs')
 
-    env.AppendUnique(LIBPATH=[Dir('.')])
-
     denv = env.Clone()
     denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
-    prereqs.require(denv, 'argobots', 'protobufc')
+    prereqs.require(denv, 'pmdk', 'argobots', 'protobufc')
 
     denv.Library('smd', Glob('*.c'),
                  LIBS=[])
 
-    SConscript('tests/SConscript', exports='denv')
+    if prereqs.test_requested():
+        SConscript('tests/SConscript', exports='denv')
 
 if __name__ == "SCons.Script":
     scons()
