Remove bio changes to be addressed in a seperate patch
Signed-off-by: Johann Lombardi <johann.lombardi@intel.com>

--- a/src/bio/SConscript
+++ b/src/bio/SConscript
@@ -2,17 +2,24 @@
 import os
 import daos_build
 
-def build_bio(env, standalone, control_tgts):
-    """build bio"""
+def scons():
+    """Execute build"""
+    Import('env', 'prereqs', 'control_tgts')
+
+    env.AppendUnique(LIBPATH=[Dir('.')])
+    env.AppendUnique(LIBPATH=[Dir('smd')])
+
+    if not prereqs.server_requested():
+        return
 
     denv = env.Clone()
+    denv.AppendUnique(LINKFLAGS=["-Wl,--no-as-needed"])
+    denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
+    prereqs.require(denv, 'pmdk', 'spdk', 'argobots', 'protobufc', 'hwloc')
 
-    if standalone:
-        denv.Append(CPPDEFINES={'BIO_STANDALONE' : '1'})
-        denv.Append(OBJPREFIX="s_")
-        name = 'bio'
-    else:
-        name = 'bio_srv'
+    SConscript('smd/SConscript')
+    denv.AppendUnique(LIBPATH=['smd'])
+    denv.AppendUnique(OBJPREFIX='b_')
 
     # SPDK related libs
     libs = ['spdk_env_dpdk', 'spdk_thread', 'spdk_bdev', 'rte_mempool']
@@ -27,29 +34,8 @@ def build_bio(env, standalone, control_tgts):
     libs += ['numa', 'dl', 'smd']
 
     tgts = Glob('*.c') + control_tgts
-    bio = daos_build.library(denv, name, tgts, install_off="../..", LIBS=libs)
+    bio = daos_build.library(denv, "bio", tgts, install_off="../..", LIBS=libs)
     denv.Install('$PREFIX/lib64/daos_srv', bio)
-
-def scons():
-    """Execute build"""
-    Import('env', 'prereqs', 'control_tgts')
-
-    env.AppendUnique(LIBPATH=[Dir('.')])
-
-    if not prereqs.server_requested():
-        return
-
-    denv = env.Clone()
-    denv.AppendUnique(LINKFLAGS=["-Wl,--no-as-needed"])
-    denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
-    prereqs.require(denv, 'pmdk', 'spdk', 'argobots', 'protobufc', 'hwloc')
-
-    SConscript('smd/SConscript')
-    denv.AppendUnique(LIBPATH=['smd'])
-    denv.AppendUnique(OBJPREFIX='b_')
-
-    build_bio(denv, False, control_tgts)
-    build_bio(denv, True, control_tgts)
 
 if __name__ == "SCons.Script":
     scons()
